--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,14 @@ dependencies:
     sdk: flutter
 
 dev_dependencies: 
+  animated_text_kit: ^4.2.2
   flutter_lints: 2.0.1
   flutter_test: 
     sdk: flutter
 
 flutter: 
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/vectors/
 
