--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   flutter_lints: 2.0.1
   flutter_test: 
     sdk: flutter
+  pinput: ^2.2.31
 
 flutter: 
   uses-material-design: true
