--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   flutter_lints: 2.0.1
   flutter_test: 
     sdk: flutter
+  flutterfire_cli: ^0.2.7
   pinput: ^2.2.31
 
 flutter: 
