--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
 dev_dependencies: 
   animated_text_kit: ^4.2.2
+  firebase_core: ^2.10.0
   flutter_lints: 2.0.1
   flutter_test: 
     sdk: flutter
