--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  firebase_auth: ^4.4.2
+  cloud_firestore: ^4.5.3
+  firebase_storage: ^11.1.1
 
 dev_dependencies: 
   animated_text_kit: ^4.2.2
